--- a/progettoiseo/pagine_statiche/templates/layouts/base.html
+++ b/progettoiseo/pagine_statiche/templates/layouts/base.html
@@ -5,7 +5,7 @@
     <body>
         {% include "layouts/components/navbar.html" %}
 
-        <div class="container">{% block content %} {% endblock %}</div>
+        <div class="container-fluid">{% block content %} {% endblock %}</div>
 
         {% include "layouts/components/scripts.html" %}
     </body>
