--- a/progettoiseo/pagine_statiche/templates/home.html
+++ b/progettoiseo/pagine_statiche/templates/home.html
@@ -140,3 +140,7 @@
 </div>
 
 {% endblock %}
+
+
+<!-- TODO: titoli e bottono "leggi tutto" degli articoli visualizzati in pagina home non funzionano
+ non hanno il link -->
